# home-work-12

./: .gitmodules  CMakeLists.txt  README.md  helpers.cpp  helpers.h  main.cpp  mlp_classifier.cpp  mlp_classifier.h  test_mlp.cpp
.github/workflows/: release.yml
